--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,4 @@
 @use 'sections/about-me';
 @use 'sections/resume-section';
 @use 'sections/portfolio-section';
-@use 'sections/about-me';
+@use 'sections/contact-me';
