--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -7,7 +7,7 @@ body{
 .menu{
     background-color: $primary;
     // padding-bottom: 0.5rem;
-    border-bottom: 4px solid $secondary-light;
+    border-bottom: 3px solid $secondary;
 
     a{
         color: $tertiary;
@@ -28,6 +28,7 @@ body{
             font-size: medium;
             text-transform: uppercase;
             font-weight: 700;
+            border: 2px solid $secondary;
         }
 
         .active{
