--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 //IMPORT SECTIONS
 @use 'sections/navbar';
 @use 'sections/about-me';
+@use 'sections/education';
 @use 'sections/resume-section';
 @use 'sections/portfolio-section';
 @use 'sections/contact-me';
