Added CSS for projects section.

--- a/scss/sections/_education.scss
+++ b/scss/sections/_education.scss
@@ -4,6 +4,7 @@
 
     font-family: serif;
     background-color: $primary;
+    padding-bottom: 100px;
 
     h2 {
         font-size: 4em;
@@ -78,7 +79,7 @@
 
                 .btn {
                     color: #fff;
-                    border-color: #b0ccda;
+                    border-color: #a8bec8;
                     background-color: #a8bec8;
                     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
                     text-align: right;
