--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12072,4 +12072,37 @@ textarea.form-control-lg {
   color: #E9E9E9;
 }
 
+.contact-me {
+  font-family: serif;
+  background-color: #E9E9E9;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.contact-me .container-fluid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
+}
+.contact-me .container-fluid h2 {
+  font-size: 4em;
+  color: #88BBD6;
+  font-family: "Dancing Script", cursive;
+  padding-bottom: 2vw;
+}
+.contact-me .flex-container {
+  display: inline-block;
+  text-align: left;
+}
+.contact-me .flexbox-container {
+  font-size: large;
+}
+.contact-me .flexbox-container i {
+  color: #B8B8B8;
+  font-size: x-large;
+}
+.contact-me .flexbox-container a {
+  color: #B8B8B8;
+}
+
 /*# sourceMappingURL=style.css.map */
