--- a/scss/sections/_portfolio-section.scss
+++ b/scss/sections/_portfolio-section.scss
@@ -4,7 +4,8 @@
 
     font-family: serif;
     background-color: $primary;
-    padding-bottom: 30px;
+    padding-top: 5vw;
+    padding-bottom: 3vw;
 
     h2 {
         font-size: 4em;
