--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12114,8 +12114,8 @@ textarea.form-control-lg {
 
 .footer {
   background-color: white;
-  padding-bottom: 60px;
-  padding-top: 40px;
+  padding-bottom: 7vw;
+  padding-top: 3vw;
   font-family: serif;
   color: #B8B8B8;
 }
