--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -3,8 +3,8 @@
 .footer {
 
     background-color: white;
-    padding-bottom: 60px;
-    padding-top: 40px;
+    padding-bottom: 7vw;
+    padding-top: 3vw;
     font-family: serif;
     color: $secondary;
 
