Adjusted colours for better visibility

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,8 +2,8 @@
 $my_primary: #E9E9E9;
 $my_secondary: #B8B8B8;
 $my_secondary_light: #cdcdcd;
-$my_tertiary: #88BBD6;
-$my_accent: #99D3DF;
+$my_tertiary: #8bb3ba;
+$my_accent: #888888;
 
 // WHITE AND GREY COLOURS
 $white:    #fff;
