--- a/scss/sections/_about-me.scss
+++ b/scss/sections/_about-me.scss
@@ -65,8 +65,8 @@
  }
 
  .fun-section {
-    border-top: 3px dotted $secondary;
-    border-bottom: 3px dotted $secondary;
+    border-top: 2px dotted $secondary;
+    border-bottom: 2px dotted $secondary;
     padding-top: 10px;
  }
 
@@ -90,6 +90,7 @@
     width: 95%;
     text-align: justify;
     font-family: serif;
+    color: #b4b4ba;
  }
 
  }
