--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11859,12 +11859,12 @@ textarea.form-control-lg {
   border-bottom: 3px solid #B8B8B8;
 }
 .menu a {
-  color: #88BBD6;
+  color: #8bb3ba;
   font-family: "Dancing Script", cursive;
   font-size: 300%;
 }
 .menu a:hover {
-  color: #88BBD6;
+  color: #8bb3ba;
 }
 .menu li {
   padding: 0 0.3rem;
@@ -11878,7 +11878,7 @@ textarea.form-control-lg {
   border: 2px solid #B8B8B8;
 }
 .menu li .active {
-  color: #88BBD6 !important;
+  color: #8bb3ba !important;
 }
 
 .about-me {
@@ -11910,7 +11910,7 @@ textarea.form-control-lg {
   font-size: 4em;
 }
 .about-me .get-in-touch i:hover {
-  color: #88BBD6;
+  color: #8bb3ba;
 }
 .about-me .about-me-section {
   display: flex;
@@ -11924,7 +11924,7 @@ textarea.form-control-lg {
 }
 .about-me .about-me-section h1 {
   width: auto;
-  color: #88BBD6;
+  color: #8bb3ba;
   font-family: "Dancing Script", cursive;
   padding-bottom: 20px;
 }
@@ -11933,8 +11933,8 @@ textarea.form-control-lg {
   justify-content: space-around;
 }
 .about-me .about-me-section .fun-section {
-  border-top: 3px dotted #B8B8B8;
-  border-bottom: 3px dotted #B8B8B8;
+  border-top: 2px dotted #B8B8B8;
+  border-bottom: 2px dotted #B8B8B8;
   padding-top: 10px;
 }
 .about-me .about-me-section .listening-to {
@@ -11953,16 +11953,17 @@ textarea.form-control-lg {
   width: 95%;
   text-align: justify;
   font-family: serif;
+  color: #b4b4ba;
 }
 
 .education {
   font-family: serif;
-  background-color: #E9E9E9;
+  background-color: #cdcdcd;
   padding-bottom: 3vw;
 }
 .education h2 {
   font-size: 4em;
-  color: #88BBD6;
+  color: #8bb3ba;
   font-family: "Dancing Script", cursive;
   padding-bottom: 2vw;
 }
@@ -12020,8 +12021,8 @@ textarea.form-control-lg {
 }
 .education .circles .circle .diploma .btn {
   color: #fff;
-  border-color: #a8bec8;
-  background-color: #a8bec8;
+  border-color: #8bb3ba;
+  background-color: #8bb3ba;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-align: right;
 }
@@ -12029,7 +12030,7 @@ textarea.form-control-lg {
   color: #fff;
 }
 .education .circles .circle .diploma a:hover {
-  color: #E9E9E9;
+  color: #cdcdcd;
 }
 .education .skills {
   padding-top: 6vw;
@@ -12040,13 +12041,13 @@ textarea.form-control-lg {
 
 .projects {
   font-family: serif;
-  background-color: #E9E9E9;
+  background-color: #cdcdcd;
   padding-top: 5vw;
   padding-bottom: 3vw;
 }
 .projects h2 {
   font-size: 4em;
-  color: #88BBD6;
+  color: #8bb3ba;
   font-family: "Dancing Script", cursive;
   padding-bottom: 3vw;
 }
@@ -12073,7 +12074,7 @@ textarea.form-control-lg {
 }
 .projects .row .language-tool-tag {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: #88BBD6;
+  background-color: #8bb3ba;
   color: #fff;
   font-size: small;
   padding: 3px;
@@ -12081,7 +12082,7 @@ textarea.form-control-lg {
   font-weight: 600;
 }
 .projects .row img {
-  filter: grayscale(50%);
+  filter: grayscale(60%);
 }
 .projects .row .card-footer {
   background-color: #fff;
@@ -12103,7 +12104,7 @@ textarea.form-control-lg {
 
 .contact-me {
   font-family: serif;
-  background-color: #E9E9E9;
+  background-color: #cdcdcd;
   text-align: center;
   padding-top: 5vw;
 }
@@ -12115,7 +12116,7 @@ textarea.form-control-lg {
 }
 .contact-me .container-fluid h2 {
   font-size: 4em;
-  color: #88BBD6;
+  color: #8bb3ba;
   font-family: "Dancing Script", cursive;
   padding-bottom: 2vw;
 }
@@ -12127,11 +12128,11 @@ textarea.form-control-lg {
   font-size: large;
 }
 .contact-me .flexbox-container i {
-  color: #B8B8B8;
+  color: #888888;
   font-size: x-large;
 }
 .contact-me .flexbox-container a {
-  color: #B8B8B8;
+  color: #888888;
 }
 
 .footer {
@@ -12152,7 +12153,7 @@ textarea.form-control-lg {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
-  border: 2px dotted #E9E9E9;
+  border: 1px dotted #B8B8B8;
   font-size: small;
   display: inline-block;
   text-align: left;
