--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -20,7 +20,7 @@
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 10px;
-            border: 2px dotted $primary;
+            border: 1px dotted $secondary;
             font-size: small;
             display: inline-block;
             text-align: left;
