--- a/scss/sections/_contact-me.scss
+++ b/scss/sections/_contact-me.scss
@@ -25,6 +25,7 @@
     .flex-container {
         display: inline-block;
         text-align: left;
+        width: auto;
     }
 
     .flexbox-container {
