--- a/scss/sections/_portfolio-section.scss
+++ b/scss/sections/_portfolio-section.scss
@@ -52,6 +52,7 @@
             padding: 4px;
             border-radius: 4px;
             font-weight: 600;
+            line-height: 20pt;
         }
 
         .skill-tag {
@@ -62,6 +63,7 @@
             padding: 3px;
             border-radius: 4px;
             font-weight: 600;
+            line-height: 20pt;
         }
 
         img {
