--- a/scss/sections/_portfolio-section.scss
+++ b/scss/sections/_portfolio-section.scss
@@ -83,6 +83,7 @@
                 text-align: right;
                 padding-left: 15px;
                 padding-right: 15px;
+                margin: 1vw;
             }
     
             a:hover {
